{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 68,
  "lineage": "17f35ded-900f-5431-089b-98c394c05a16",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_nat_rule_collection",
      "name": "frontend-rg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Dnat",
            "azure_firewall_name": "frontendfirewall",
            "id": "/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/frontendrg/providers/Microsoft.Network/azureFirewalls/frontendfirewall/natRuleCollections/nat01",
            "name": "nat01",
            "priority": 100,
            "resource_group_name": "frontendrg",
            "rule": [
              {
                "description": "",
                "destination_addresses": [
                  "40.88.221.166"
                ],
                "destination_ports": [
                  "3389"
                ],
                "name": "jbox-rule",
                "protocols": [
                  "TCP"
                ],
                "source_addresses": [
                  "*"
                ],
                "translated_address": "10.0.1.4",
                "translated_port": "3389"
              },
              {
                "description": "",
                "destination_addresses": [
                  "40.88.221.166"
                ],
                "destination_ports": [
                  "80"
                ],
                "name": "web-rule",
                "protocols": [
                  "TCP"
                ],
                "source_addresses": [
                  "*"
                ],
                "translated_address": "10.0.2.4",
                "translated_port": "80"
              }
            ],
            "timeouts": null
          },
          "depends_on": [
            "azurerm_firewall.frontend-firewall",
            "azurerm_network_interface.backend-nic",
            "azurerm_network_interface.jumpbox-nic",
            "azurerm_public_ip.frontend-pip",
            "azurerm_resource_group.frontend-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "backend-nic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/backendrg/providers/Microsoft.Network/networkInterfaces/backendnic",
            "internal_domain_name_suffix": "soxj1xzveaiexawchaiqkpfv0a.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/backendrg/providers/Microsoft.Network/virtualNetworks/backendvnet/subnets/backendsnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-98-AB-82",
            "name": "backendnic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "backendrg",
            "virtual_machine_id": "/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/backendrg/providers/Microsoft.Compute/virtualMachines/web-vm01"
          },
          "depends_on": [
            "azurerm_resource_group.backend-rg",
            "azurerm_subnet.backend-snet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "jumpbox-nic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/jumpboxrg/providers/Microsoft.Network/networkInterfaces/jumpboxnic",
            "internal_domain_name_suffix": "pt5vw4nz3bgudaiz3fzxe5lcsd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/frontendrg/providers/Microsoft.Network/virtualNetworks/frontendvnet/subnets/frontendjboxsnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-8A-D4-E5",
            "name": "jumpboxnic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "jumpboxrg",
            "virtual_machine_id": "/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/jumpboxrg/providers/Microsoft.Compute/virtualMachines/Jbox-vm01"
          },
          "depends_on": [
            "azurerm_resource_group.jumpbox-rg",
            "azurerm_subnet.frontend-jbox-snet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "backend-rg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/backendrg/providers/Microsoft.Network/networkInterfaces/backendnic|/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/backendrg/providers/Microsoft.Network/networkSecurityGroups/backendsg",
            "network_interface_id": "/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/backendrg/providers/Microsoft.Network/networkInterfaces/backendnic",
            "network_security_group_id": "/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/backendrg/providers/Microsoft.Network/networkSecurityGroups/backendsg"
          },
          "depends_on": [
            "azurerm_network_interface.backend-nic",
            "azurerm_network_security_group.backend-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "jbox-rg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/jumpboxrg/providers/Microsoft.Network/networkInterfaces/jumpboxnic|/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/jumpboxrg/providers/Microsoft.Network/networkSecurityGroups/jumpboxsg",
            "network_interface_id": "/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/jumpboxrg/providers/Microsoft.Network/networkInterfaces/jumpboxnic",
            "network_security_group_id": "/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/jumpboxrg/providers/Microsoft.Network/networkSecurityGroups/jumpboxsg"
          },
          "depends_on": [
            "azurerm_network_interface.jumpbox-nic",
            "azurerm_network_security_group.jumpbox-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "backend-sg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/backendrg/providers/Microsoft.Network/networkSecurityGroups/backendsg",
            "location": "eastus",
            "name": "backendsg",
            "resource_group_name": "backendrg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.2.4/32",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rdp",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.4/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.2.4/32",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "backendnsr",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "depends_on": [
            "azurerm_resource_group.backend-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "jumpbox-sg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/jumpboxrg/providers/Microsoft.Network/networkSecurityGroups/jumpboxsg",
            "location": "eastus",
            "name": "jumpboxsg",
            "resource_group_name": "jumpboxrg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.1.4/32",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "jumpboxnsr",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "depends_on": [
            "azurerm_resource_group.jumpbox-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "backend-sr",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.2.4/32",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/backendrg/providers/Microsoft.Network/networkSecurityGroups/backendsg/securityRules/backendnsr",
            "name": "backendnsr",
            "network_security_group_name": "backendsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "backendrg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "depends_on": [
            "azurerm_network_interface.backend-nic",
            "azurerm_network_security_group.backend-sg",
            "azurerm_resource_group.backend-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "jbox-rdp-sr",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.2.4/32",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/backendrg/providers/Microsoft.Network/networkSecurityGroups/backendsg/securityRules/rdp",
            "name": "rdp",
            "network_security_group_name": "backendsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "backendrg",
            "source_address_prefix": "10.0.1.4/32",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "depends_on": [
            "azurerm_network_interface.backend-nic",
            "azurerm_network_interface.jumpbox-nic",
            "azurerm_network_security_group.backend-sg",
            "azurerm_resource_group.backend-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "jumpbox-sr",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.1.4/32",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/jumpboxrg/providers/Microsoft.Network/networkSecurityGroups/jumpboxsg/securityRules/jumpboxnsr",
            "name": "jumpboxnsr",
            "network_security_group_name": "jumpboxsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "jumpboxrg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "depends_on": [
            "azurerm_network_interface.jumpbox-nic",
            "azurerm_network_security_group.jumpbox-sg",
            "azurerm_resource_group.jumpbox-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "frontend-pip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/frontendrg/providers/Microsoft.Network/publicIPAddresses/frontendpip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.88.221.166",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "frontendpip",
            "resource_group_name": "frontendrg",
            "sku": "Standard"
          },
          "depends_on": [
            "azurerm_resource_group.frontend-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "backend-snet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/backendrg/providers/Microsoft.Network/virtualNetworks/backendvnet/subnets/backendsnet",
            "name": "backendsnet",
            "resource_group_name": "backendrg",
            "virtual_network_name": "backendvnet"
          },
          "depends_on": [
            "azurerm_resource_group.backend-rg",
            "azurerm_virtual_network.backend-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "frontend-firewall-snet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/frontendrg/providers/Microsoft.Network/virtualNetworks/frontendvnet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "frontendrg",
            "virtual_network_name": "frontendvnet"
          },
          "depends_on": [
            "azurerm_resource_group.frontend-rg",
            "azurerm_virtual_network.frontend-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "frontend-jbox-snet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/frontendrg/providers/Microsoft.Network/virtualNetworks/frontendvnet/subnets/frontendjboxsnet",
            "name": "frontendjboxsnet",
            "resource_group_name": "frontendrg",
            "virtual_network_name": "frontendvnet"
          },
          "depends_on": [
            "azurerm_resource_group.frontend-rg",
            "azurerm_virtual_network.frontend-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "backend-vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.2.0/23"
            ],
            "guid": "df9dae93-2035-4b10-82c2-3811053cb5d0",
            "id": "/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/backendrg/providers/Microsoft.Network/virtualNetworks/backendvnet",
            "location": "eastus",
            "name": "backendvnet",
            "resource_group_name": "backendrg",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/backendrg/providers/Microsoft.Network/virtualNetworks/backendvnet/subnets/backendsnet",
                "name": "backendsnet"
              }
            ]
          },
          "depends_on": [
            "azurerm_resource_group.backend-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "frontend-vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/23"
            ],
            "guid": "795bff7c-e8b9-414d-8119-e973727d6293",
            "id": "/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/frontendrg/providers/Microsoft.Network/virtualNetworks/frontendvnet",
            "location": "eastus",
            "name": "frontendvnet",
            "resource_group_name": "frontendrg",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/frontendrg/providers/Microsoft.Network/virtualNetworks/frontendvnet/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/frontendrg/providers/Microsoft.Network/virtualNetworks/frontendvnet/subnets/frontendjboxsnet",
                "name": "frontendjboxsnet"
              }
            ]
          },
          "depends_on": [
            "azurerm_resource_group.frontend-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "backend-frontend",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/backendrg/providers/Microsoft.Network/virtualNetworks/backendvnet/virtualNetworkPeerings/backendfrontend",
            "name": "backendfrontend",
            "remote_virtual_network_id": "/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/frontendrg/providers/Microsoft.Network/virtualNetworks/frontendvnet",
            "resource_group_name": "backendrg",
            "use_remote_gateways": false,
            "virtual_network_name": "backendvnet"
          },
          "depends_on": [
            "azurerm_resource_group.backend-rg",
            "azurerm_virtual_network.backend-vnet",
            "azurerm_virtual_network.frontend-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "frontend-backend",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/frontendrg/providers/Microsoft.Network/virtualNetworks/frontendvnet/virtualNetworkPeerings/frontendbackend",
            "name": "frontendbackend",
            "remote_virtual_network_id": "/subscriptions/a9321994-f270-45be-85c8-586b836c4d38/resourceGroups/backendrg/providers/Microsoft.Network/virtualNetworks/backendvnet",
            "resource_group_name": "frontendrg",
            "use_remote_gateways": false,
            "virtual_network_name": "frontendvnet"
          },
          "depends_on": [
            "azurerm_resource_group.frontend-rg",
            "azurerm_virtual_network.backend-vnet",
            "azurerm_virtual_network.frontend-vnet"
          ]
        }
      ]
    }
  ]
}